--- a/pom.xml
+++ b/pom.xml
@@ -83,11 +83,38 @@
             <type>pom</type>
             <scope>test</scope>
         </dependency>
+
+	  <dependency>
+	    <groupId>javax.servlet</groupId>
+	    <artifactId>javax.servlet-api</artifactId>
+	    <version>3.1.0</version>
+	    <type>jar</type>
+	    <scope>provided</scope>
+	  </dependency>
+	  
+	  <dependency>
+		  <groupId>com.google.cloud</groupId>
+		  <artifactId>google-cloud-storage</artifactId>
+		  <version>1.16.0</version>
+	  </dependency>
+	  
+		<dependency>
+		  <groupId>com.google.cloud</groupId>
+		  <artifactId>google-cloud</artifactId>
+		  <version>0.8.0</version>
+		</dependency>
+
     </dependencies>
 
     <build>
         <finalName>hello</finalName>
         <plugins>
+        
+        <plugin>
+		   <groupId>com.google.cloud.tools</groupId>
+		   <artifactId>appengine-maven-plugin</artifactId>
+		   <version>1.3.1</version>
+		</plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -97,7 +124,7 @@
                     <source>1.7</source>
                     <target>1.7</target>
                 </configuration>
-            </plugin>
+        </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
@@ -113,7 +140,7 @@
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>
+           </plugin>
             <plugin>
                 <groupId>org.eclipse.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
@@ -127,6 +154,8 @@
                     <war>${project.build.directory}/${project.build.finalName}.war</war>
                 </configuration>
             </plugin>
+            
+            
         </plugins>
     </build>
 
